Update printouts and cleanup code for ethnicity groupings

--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -94,43 +94,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([False, False, False, ..., False, False, False], dtype=bool)]\n",
-      "AMERICAN INDIAN/ALASKA NATIVE        2\n",
-      "ASIAN                              105\n",
-      "ASIAN - ASIAN INDIAN                 0\n",
-      "ASIAN - CAMBODIAN                    0\n",
-      "ASIAN - CHINESE                      0\n",
-      "ASIAN - FILIPINO                     0\n",
-      "ASIAN - JAPANESE                     0\n",
-      "ASIAN - KOREAN                       0\n",
-      "ASIAN - VIETNAMESE                   0\n",
-      "BLACK/AFRICAN                        4\n",
-      "BLACK/AFRICAN AMERICAN             324\n",
-      "BLACK/CAPE VERDEAN                  14\n",
-      "BLACK/HAITIAN                        4\n",
-      "HISPANIC OR LATINO                   0\n",
-      "HISPANIC/LATINO - COLOMBIAN          0\n",
-      "HISPANIC/LATINO - CUBAN              0\n",
-      "HISPANIC/LATINO - DOMINICAN          0\n",
-      "HISPANIC/LATINO - GUATEMALAN         0\n",
-      "HISPANIC/LATINO - MEXICAN            0\n",
-      "HISPANIC/LATINO - PUERTO RICAN       0\n",
-      "HISPANIC/LATINO - SALVADORAN         0\n",
-      "MIDDLE EASTERN                       2\n",
-      "MULTI RACE ETHNICITY                11\n",
-      "OTHER                              135\n",
-      "PATIENT DECLINED TO ANSWER          50\n",
-      "PORTUGUESE                           0\n",
-      "UNABLE TO OBTAIN                   114\n",
-      "UNKNOWN/NOT SPECIFIED              525\n",
-      "WHITE                             3858\n",
-      "WHITE - BRAZILIAN                    7\n",
-      "WHITE - EASTERN EUROPEAN             3\n",
-      "WHITE - OTHER EUROPEAN               4\n",
-      "WHITE - RUSSIAN                     11\n",
-      "HISPANIC/LATINO                    169\n",
-      "MULTI/OTHER                          0\n",
-      "UNKNOWN                              0\n",
+      "AMERICAN INDIAN/ALASKA NATIVE       2\n",
+      "ASIAN                             105\n",
+      "BLACK/AFRICAN AMERICAN            346\n",
+      "WHITE                            3885\n",
+      "HISPANIC/LATINO                   169\n",
+      "MULTI/OTHER                       146\n",
+      "UNKNOWN                           689\n",
       "dtype: int64\n"
      ]
     }
@@ -139,8 +109,7 @@
     "#ethnicity summary\n",
     "eth = cohort['ethnicity'].astype('category')\n",
     "\n",
-    "#grouping based on the OMB standards at: http://grants.nih.gov/grants/guide/notice-files/NOT-OD-15-089.html\n",
-    "# Hispanic/Latino, American Indian/Alaska Native, Asian, Black/African American, Native Hawaiian/Pacific Islander, White\n",
+    "#grouping based on the standards at: http://grants.nih.gov/grants/guide/notice-files/NOT-OD-15-089.html\n",
     "eth = eth.cat.add_categories(['HISPANIC/LATINO','MULTI/OTHER','UNKNOWN'])\n",
     "\n",
     "eth[np.array([('HISPANIC' in i or\n",
@@ -149,44 +118,17 @@
     "eth[np.array([('BLACK' in i or\n",
     "               'AFRICAN' in i) for i in eth],dtype=bool)]='BLACK/AFRICAN AMERICAN'\n",
     "eth[np.array([('WHITE' in i or\n",
-    "               'MIDDLE EAST' in i) for i in eth],dtype=bool)]='BLACK/AFRICAN AMERICAN'\n",
-    "'''\n",
-    "for i in range(len(cohort['ethnicity'])):\n",
-    "    if('HISPANIC' in eth[i]) or ('PORTUGUESE' in eth[i]):\n",
-    "        eth[i] = 'HISPANIC/LATINO'\n",
-    "    elif('ASIAN' in eth[i]):\n",
-    "        eth[i] = 'ASIAN'\n",
-    "    elif('BLACK' in eth[i]):\n",
-    "        eth[i] = 'BLACK/AFRICAN AMERICAN'\n",
-    "    elif('WHITE' in eth[i]) or ('MIDDLE EASTERN' in eth[i]):\n",
-    "        eth[i] = 'WHITE'\n",
-    "    elif('MULTI' in eth[i]) or ('OTHER' in eth[i]):\n",
-    "        eth[i] = 'MULTI/OTHER'\n",
-    "    elif('DECLINE' in eth[i] or ('UNABLE' in eth[i]) or ('UNKNOWN' in eth[i])):\n",
-    "        eth[i] = 'UNKNOWN'\n",
+    "               'MIDDLE EAST' in i) for i in eth],dtype=bool)]='WHITE'\n",
+    "eth[np.array([('MULTI' in i or\n",
+    "               'OTHER' in i) for i in eth],dtype=bool)]='MULTI/OTHER'\n",
+    "eth[np.array([('DECLINE' in i or\n",
+    "               'UNABLE' in i or\n",
+    "               'UNKNOWN' in i) for i in eth],dtype=bool)]='UNKNOWN'\n",
     "\n",
     "eth = eth.cat.remove_unused_categories()\n",
-    "'''\n",
+    "\n",
     "print pd.value_counts(eth.values, sort=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
