Get MAP features from raw values

--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 152,
    "metadata": {
     "collapsed": false
    },
@@ -10,32 +10,29 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from StringIO import StringIO\n",
-    "import requests"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#load in data\n",
+    "# load in data\n",
     "data_path='../data_extraction/data/'\n",
     "\n",
     "cohort = pd.read_table(data_path+'cohort.tsv')\n",
-    "creatinine = pd.read_table(data_path+'creatinine.csv')\n",
-    "maps = pd.read_table(data_path+'map.csv')\n",
-    "urine = pd.read_table(data_path+'urine.csv')"
+    "creatinine = pd.read_csv(data_path+'creatinine.csv')\n",
+    "maps = pd.read_csv(data_path+'map.csv')\n",
+    "urine = pd.read_csv(data_path+'urine.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 159,
    "metadata": {
     "collapsed": false
    },
@@ -44,26 +41,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               age          los\n",
-      "count  5342.000000  5342.000000\n",
-      "mean     71.703842    11.416165\n",
-      "std      48.474031    10.331876\n",
-      "min      18.138720     3.000300\n",
-      "25%      52.494296     4.790000\n",
-      "50%      65.322301     7.903400\n",
-      "75%      76.984900    14.118000\n",
-      "max     309.777981   173.072500\n"
+      "               age          los    max_lactate    vaso_frac\n",
+      "count  5342.000000  5342.000000    4485.000000  5342.000000\n",
+      "mean     71.703842    11.416165     226.160700     0.133613\n",
+      "std      48.474031    10.331876   14931.965231     0.214067\n",
+      "min      18.138720     3.000300       0.500000     0.000000\n",
+      "25%      52.494296     4.790000       1.500000     0.000000\n",
+      "50%      65.322301     7.903400       2.200000     0.006947\n",
+      "75%      76.984900    14.118000       3.800000     0.196396\n",
+      "max     309.777981   173.072500  999999.000000     0.995077\n"
      ]
     }
    ],
    "source": [
-    "#numerical variable summaries\n",
-    "print cohort[['age','los']].describe()"
+    "# numerical variable summaries\n",
+    "print cohort[['age','los','max_lactate','vaso_frac']].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -79,13 +76,13 @@
     }
    ],
    "source": [
-    "#gender summary\n",
+    "# gender summary\n",
     "print pd.value_counts(cohort['gender'].values, sort=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -106,10 +103,10 @@
     }
    ],
    "source": [
-    "#ethnicity summary\n",
+    "# ethnicity summary\n",
     "eth = cohort['ethnicity'].astype('category')\n",
     "\n",
-    "#grouping based on the standards at: http://grants.nih.gov/grants/guide/notice-files/NOT-OD-15-089.html\n",
+    "# grouping based on the standards at: http://grants.nih.gov/grants/guide/notice-files/NOT-OD-15-089.html\n",
     "eth = eth.cat.add_categories(['HISPANIC/LATINO','MULTI/OTHER','UNKNOWN'])\n",
     "\n",
     "eth[np.array([('HISPANIC' in i or\n",
@@ -128,6 +125,33 @@
     "eth = eth.cat.remove_unused_categories()\n",
     "\n",
     "print pd.value_counts(eth.values, sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# convert raw MAP readings to MAP features\n",
+    "\n",
+    "# for now, limit readings to first 72 hours\n",
+    "num_hours = 72\n",
+    "maps = maps[(0 < maps.min_from_intime) & (maps.min_from_intime < num_hours*60)]\n",
+    "\n",
+    "# average MAP for every hour\n",
+    "maps['hour'] = pd.Series((maps.min_from_intime/60).astype(int), index=maps.index)\n",
+    "\n",
+    "# get means for every hour and minimum value\n",
+    "mean_maps = maps.groupby(['icustay_id', 'hour'])['value'].mean()\n",
+    "min_maps = maps.groupby(['icustay_id'])['value'].min()\n",
+    "\n",
+    "# bin MAP values\n",
+    "# TODO: How to handle NaNs (no data recorded during that hour)?\n",
+    "map_cutoffs = np.append(np.arange(30,100,10),200)\n",
+    "binned_mean_maps = pd.cut(mean_maps, map_cutoffs)"
    ]
   }
  ],
