Get MAP proportions plus small tweaks

--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 340,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 342,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 343,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 346,
    "metadata": {
     "collapsed": false
    },
@@ -69,20 +69,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F    2613\n",
-      "M    2729\n",
-      "dtype: int64\n"
+      "M    0.510857\n",
+      "F    0.489143\n",
+      "dtype: float64\n"
      ]
     }
    ],
    "source": [
     "# gender summary\n",
-    "print pd.value_counts(cohort['gender'].values, sort=False)"
+    "print pd.value_counts(cohort['gender'].values,normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 349,
    "metadata": {
     "collapsed": false
    },
@@ -91,14 +91,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AMERICAN INDIAN/ALASKA NATIVE       2\n",
-      "ASIAN                             105\n",
-      "BLACK/AFRICAN AMERICAN            346\n",
-      "WHITE                            3885\n",
-      "HISPANIC/LATINO                   169\n",
-      "MULTI/OTHER                       146\n",
-      "UNKNOWN                           689\n",
-      "dtype: int64\n"
+      "AMERICAN INDIAN/ALASKA NATIVE    0.000374\n",
+      "ASIAN                            0.019656\n",
+      "BLACK/AFRICAN AMERICAN           0.064770\n",
+      "WHITE                            0.727256\n",
+      "HISPANIC/LATINO                  0.031636\n",
+      "MULTI/OTHER                      0.027331\n",
+      "UNKNOWN                          0.128978\n",
+      "dtype: float64\n"
      ]
     }
    ],
@@ -124,12 +124,12 @@
     "\n",
     "eth = eth.cat.remove_unused_categories()\n",
     "\n",
-    "print pd.value_counts(eth.values, sort=False)"
+    "print pd.value_counts(eth.values,normalize=True,sort=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 351,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +151,8 @@
     "# bin MAP values\n",
     "# TODO: How to handle NaNs (no data recorded during that hour)?\n",
     "map_cutoffs = np.append(np.arange(30,100,10),200)\n",
-    "binned_mean_maps = pd.cut(mean_maps, map_cutoffs)"
+    "binned_mean_maps = pd.cut(mean_maps, map_cutoffs)\n",
+    "map_fracs = binned_mean_maps.groupby([binned_mean_maps.index.get_level_values(0)]).value_counts(normalize=True)"
    ]
   }
  ],
