Use creatinine to determine AKI onset

--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -23,11 +23,7 @@
    "source": [
     "# load in data\n",
     "data_path='../data_extraction/data/'\n",
-    "\n",
-    "cohort = pd.read_table(data_path+'cohort.tsv')\n",
-    "creatinine = pd.read_csv(data_path+'creatinine.csv')\n",
-    "maps = pd.read_csv(data_path+'map.csv')\n",
-    "urine = pd.read_csv(data_path+'urine.csv')"
+    "cohort = pd.read_table(data_path+'cohort.tsv')"
    ]
   },
   {
@@ -129,13 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 510,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# convert raw MAP readings to MAP features\n",
+    "maps = pd.read_csv(data_path+'map.csv')\n",
     "\n",
     "# for now, limit readings to first 72 hours\n",
     "num_hours = 72\n",
@@ -154,6 +151,55 @@
     "binned_mean_maps = pd.cut(mean_maps, map_cutoffs)\n",
     "map_fracs = binned_mean_maps.groupby([binned_mean_maps.index.get_level_values(0)]).value_counts(normalize=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 512,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# use creatinine measurements to determine AKI onset\n",
+    "creatinine = pd.read_csv(data_path+'creatinine.csv')\n",
+    "creatinine = creatinine.dropna()\n",
+    "\n",
+    "# AKIN definition: increase in serum creatinine >= 0.3 mg/dL OR increase of >= 50% in serum creatinine\n",
+    "# OR reduction in urine output (<0.5 mL/kg) within 48 hrs\n",
+    "time_lim = 48 #hours\n",
+    "\n",
+    "\n",
+    "# calculate time and first creatinine measurement from admission\n",
+    "first_creat = creatinine.loc[creatinine.groupby(['icustay_id'])['min_from_intime'].idxmin(skipna=True)]\n",
+    "creatinine = creatinine.merge(first_creat,suffixes=('','_first'),on=['icustay_id'])\n",
+    "\n",
+    "# get rid of values outside specified time window\n",
+    "creatinine = creatinine[(creatinine.min_from_intime_first < creatinine.min_from_intime) \n",
+    "                        & (creatinine.min_from_intime < creatinine.min_from_intime_first+time_lim*60)]\n",
+    "\n",
+    "# get max creatinine value within time window\n",
+    "max_creat = creatinine.loc[creatinine.groupby(['icustay_id'])['value'].idxmax(skipna=True)]\n",
+    "\n",
+    "# nicely summarize creatinine data\n",
+    "d = {'icustay_id':max_creat['icustay_id'],\n",
+    "     'value_first':max_creat['value_first'],\n",
+    "     'value_max':max_creat['value'],}\n",
+    "aki_summary = pd.DataFrame(d)\n",
+    "\n",
+    "# use first and max creatinine within 48 hrs to determine AKI\n",
+    "# TODO: incorporate urine information\n",
+    "aki_summary['aki'] = ((aki_summary.value_max-aki_summary.value_first>=0.3) | \n",
+    "                      (aki_summary.value_max-aki_summary.value_first>=0.5*aki_summary.value_first))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
