Calculate MAPs for hours without measurements using linear interpolation

--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "pd.options.mode.chained_assignment = None\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -125,38 +127,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of hours missing MAP values: 0.0729135812521\n"
+     ]
+    }
+   ],
    "source": [
     "# convert raw MAP readings to MAP features\n",
-    "maps = pd.read_csv(data_path+'map.csv')\n",
-    "\n",
-    "# for now, limit readings to first 72 hours\n",
-    "num_hours = 72\n",
-    "maps = maps[(0 < maps.min_from_intime) & (maps.min_from_intime < num_hours*60)]\n",
+    "# maps = pd.read_csv(data_path+'map.csv')\n",
+    "interval = 60\n",
     "\n",
     "# average MAP for every hour\n",
-    "maps['hour'] = pd.Series((maps.min_from_intime/60).astype(int), index=maps.index)\n",
+    "maps['hour'] = pd.Series((maps.min_from_intime/interval).astype(int), index=maps.index)\n",
     "\n",
-    "# get means for every hour and minimum value\n",
+    "# get means for every hour\n",
     "mean_maps = maps.groupby(['icustay_id', 'hour'])['value'].mean()\n",
-    "min_maps = maps.groupby(['icustay_id'])['value'].min()\n",
+    "mean_maps = mean_maps.to_frame().reset_index().set_index(['icustay_id'])\n",
+    "\n",
+    "# interpolate MAPs for missing values\n",
+    "min_hours = mean_maps.groupby([mean_maps.index.get_level_values(0)])['hour'].min()\n",
+    "max_hours = mean_maps.groupby([mean_maps.index.get_level_values(0)])['hour'].max()\n",
+    "\n",
+    "interp_index = []\n",
+    "for this_icustay in min_hours.index:\n",
+    "    min_hour = min_hours.loc[this_icustay]\n",
+    "    max_hour = max_hours.loc[this_icustay]\n",
+    "    test =[hour for hour in np.arange(min_hour,max_hour+1)]\n",
+    "    interp_index += [(this_icustay, hour) for hour in np.arange(min_hour,max_hour+1)]\n",
+    "\n",
+    "mean_maps = mean_maps.set_index(['hour'],append=True)\n",
+    "interp_mean_maps = mean_maps.reindex(pd.MultiIndex.from_tuples(interp_index,names=['icustay_id','hours']))\n",
+    "interp_mean_maps = interp_mean_maps['value'].interpolate(method='linear')\n",
+    "interp_mean_maps = interp_mean_maps.to_frame().reset_index()\n",
+    "\n",
+    "# get percent of hours missing a MAP value\n",
+    "missing_map = len(interp_mean_maps.index) - len(mean_maps.index)\n",
+    "\n",
+    "frac_missing = missing_map/float(len(interp_mean_maps.index))\n",
+    "print \"Fraction of hours missing MAP values:\", frac_missing\n",
+    "\n",
+    "# get minimum MAP value per patient\n",
+    "min_ind = interp_mean_maps.groupby('icustay_id')['value'].idxmin(skipna=True)\n",
+    "min_maps = interp_mean_maps.loc[min_ind]\n",
     "\n",
     "# bin MAP values\n",
-    "# TODO: How to handle NaNs (no data recorded during that hour)?\n",
     "map_cutoffs = np.append(np.arange(30,100,10),200)\n",
-    "binned_mean_maps = pd.cut(mean_maps, map_cutoffs)\n",
-    "map_fracs = binned_mean_maps.groupby([binned_mean_maps.index.get_level_values(0)]).value_counts(normalize=True)"
+    "interp_mean_maps['bins'] = pd.cut(interp_mean_maps['value'], map_cutoffs)\n",
+    "binned_min_maps = pd.cut(min_maps['value'], map_cutoffs)\n",
+    "\n",
+    "map_fracs = interp_mean_maps.groupby('icustay_id')['bins'].value_counts(normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 174,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -168,10 +203,9 @@
     "# OR reduction in urine output (<0.5 mL/kg) within 48 hrs\n",
     "time_lim = 48 #hours\n",
     "\n",
-    "\n",
     "# calculate time and first creatinine measurement from admission\n",
     "first_creat = creatinine.loc[creatinine.groupby(['icustay_id'])['min_from_intime'].idxmin(skipna=True)]\n",
-    "creatinine = creatinine.merge(first_creat,suffixes=('','_first'),on=['icustay_id'])\n",
+    "creatinine = creatinine.merge(first_creat,suffixes=('','_first'),on=['icustay_id'],how='left')\n",
     "\n",
     "# get rid of values outside specified time window\n",
     "creatinine = creatinine[(creatinine.min_from_intime_first < creatinine.min_from_intime) \n",
@@ -189,7 +223,8 @@
     "# use first and max creatinine within 48 hrs to determine AKI\n",
     "# TODO: incorporate urine information\n",
     "aki_summary['aki'] = ((aki_summary.value_max-aki_summary.value_first>=0.3) | \n",
-    "                      (aki_summary.value_max-aki_summary.value_first>=0.5*aki_summary.value_first))"
+    "                      (aki_summary.value_max-aki_summary.value_first>=0.5*aki_summary.value_first))\n",
+    "aki = aki_summary.set_index('icustay_id')"
    ]
   },
   {
@@ -199,7 +234,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "lr_data = cohort[['icustay_id','age','los','max_lactate','vaso_frac','gender']]\n",
+    "lr_data['eth'] = eth\n",
+    "lr_data = lr_data.set_index('icustay_id')\n",
+    "\n",
+    "lr_data = lr_data.join(min_maps,how='left')\n",
+    "lr_data.rename(columns={'value':'min_map'},inplace=True)\n",
+    "\n",
+    "lr_data = lr_data.join(aki_summary['aki'],how='inner')\n",
+    "lr_data.rename(columns={'value':'aki'},inplace=True)"
+   ]
   }
  ],
  "metadata": {
