Restrict MAP values to be binned to the first 72 hours

--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 177,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +164,7 @@
     "    interp_index += [(this_icustay, hour) for hour in np.arange(min_hour,max_hour+1)]\n",
     "\n",
     "mean_maps = mean_maps.set_index(['hour'],append=True)\n",
-    "interp_mean_maps = mean_maps.reindex(pd.MultiIndex.from_tuples(interp_index,names=['icustay_id','hours']))\n",
+    "interp_mean_maps = mean_maps.reindex(pd.MultiIndex.from_tuples(interp_index,names=['icustay_id','hour']))\n",
     "interp_mean_maps = interp_mean_maps['value'].interpolate(method='linear')\n",
     "interp_mean_maps = interp_mean_maps.to_frame().reset_index()\n",
     "\n",
@@ -178,12 +178,14 @@
     "min_ind = interp_mean_maps.groupby('icustay_id')['value'].idxmin(skipna=True)\n",
     "min_maps = interp_mean_maps.loc[min_ind]\n",
     "\n",
-    "# bin MAP values\n",
+    "# bin MAP values for first 72 hours\n",
+    "map_72 = interp_mean_maps.loc[interp_mean_maps['hour']<72]\n",
+    "\n",
     "map_cutoffs = np.append(np.arange(30,100,10),200)\n",
-    "interp_mean_maps['bins'] = pd.cut(interp_mean_maps['value'], map_cutoffs)\n",
+    "map_72['bins'] = pd.cut(map_72['value'], map_cutoffs)\n",
     "binned_min_maps = pd.cut(min_maps['value'], map_cutoffs)\n",
     "\n",
-    "map_fracs = interp_mean_maps.groupby('icustay_id')['bins'].value_counts(normalize=True)"
+    "map_fracs = map_72.groupby('icustay_id')['bins'].value_counts(normalize=True)"
    ]
   },
   {
