Label patients with AKI using creatinine criteria

--- a/data_analysis/initial_analysis.ipynb
+++ b/data_analysis/initial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 347,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 348,
    "metadata": {
     "collapsed": false
    },
@@ -25,12 +25,17 @@
    "source": [
     "# load in data\n",
     "data_path='../data_extraction/data/'\n",
-    "cohort = pd.read_table(data_path+'cohort.tsv')"
+    "\n",
+    "cohort = pd.read_table(data_path+'cohort.tsv')\n",
+    "maps = pd.read_csv(data_path+'map.csv')\n",
+    "creatinine = pd.read_csv(data_path+'creatinine.csv')\n",
+    "admission_creatinine = pd.read_csv(data_path+'admission_creatinine.csv')\n",
+    "urine = pd.read_csv(data_path+'map.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 349,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 350,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 351,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 352,
    "metadata": {
     "collapsed": false
    },
@@ -142,10 +147,10 @@
    ],
    "source": [
     "# convert raw MAP readings to MAP features\n",
-    "# maps = pd.read_csv(data_path+'map.csv')\n",
     "interval = 60\n",
     "\n",
     "# average MAP for every hour\n",
+    "maps.set_index('icustay_id')\n",
     "maps['hour'] = pd.Series((maps.min_from_intime/interval).astype(int), index=maps.index)\n",
     "\n",
     "# get means for every hour\n",
@@ -160,7 +165,6 @@
     "for this_icustay in min_hours.index:\n",
     "    min_hour = min_hours.loc[this_icustay]\n",
     "    max_hour = max_hours.loc[this_icustay]\n",
-    "    test =[hour for hour in np.arange(min_hour,max_hour+1)]\n",
     "    interp_index += [(this_icustay, hour) for hour in np.arange(min_hour,max_hour+1)]\n",
     "\n",
     "mean_maps = mean_maps.set_index(['hour'],append=True)\n",
@@ -179,18 +183,22 @@
     "min_maps = interp_mean_maps.loc[min_ind]\n",
     "\n",
     "# bin MAP values for first 72 hours\n",
-    "map_72 = interp_mean_maps.loc[interp_mean_maps['hour']<72]\n",
+    "map_72 = interp_mean_maps.loc[(0<interp_mean_maps['hour']) & (interp_mean_maps['hour']<72)]\n",
     "\n",
     "map_cutoffs = np.append(np.arange(30,100,10),200)\n",
-    "map_72['bins'] = pd.cut(map_72['value'], map_cutoffs)\n",
-    "binned_min_maps = pd.cut(min_maps['value'], map_cutoffs)\n",
+    "map_72['bin'] = pd.cut(map_72['value'], map_cutoffs)\n",
+    "min_maps['bin'] = pd.cut(min_maps['value'], map_cutoffs)\n",
     "\n",
-    "map_fracs = map_72.groupby('icustay_id')['bins'].value_counts(normalize=True)"
+    "map_fracs = map_72.groupby('icustay_id')['bin'].value_counts(normalize=True)\n",
+    "\n",
+    "# reformat features to be used in final dataset\n",
+    "min_maps = min_maps.set_index('icustay_id')\n",
+    "map_fracs = map_fracs.to_frame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 353,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -198,42 +206,55 @@
    "outputs": [],
    "source": [
     "# use creatinine measurements to determine AKI onset\n",
-    "creatinine = pd.read_csv(data_path+'creatinine.csv')\n",
     "creatinine = creatinine.dropna()\n",
     "\n",
-    "# AKIN definition: increase in serum creatinine >= 0.3 mg/dL OR increase of >= 50% in serum creatinine\n",
-    "# OR reduction in urine output (<0.5 mL/kg) within 48 hrs\n",
-    "time_lim = 48 #hours\n",
+    "# only consider creatinine measurements after admission\n",
+    "creatinine = creatinine.loc[creatinine['min_from_intime']>0]\n",
     "\n",
     "# calculate time and first creatinine measurement from admission\n",
-    "first_creat = creatinine.loc[creatinine.groupby(['icustay_id'])['min_from_intime'].idxmin(skipna=True)]\n",
-    "creatinine = creatinine.merge(first_creat,suffixes=('','_first'),on=['icustay_id'],how='left')\n",
+    "creatinine = creatinine.merge(admission_creatinine,suffixes=('','_ref'),on=['icustay_id'],how='left')\n",
     "\n",
-    "# get rid of values outside specified time window\n",
-    "creatinine = creatinine[(creatinine.min_from_intime_first < creatinine.min_from_intime) \n",
-    "                        & (creatinine.min_from_intime < creatinine.min_from_intime_first+time_lim*60)]\n",
+    "# RIFLE Creatinine Criteria: Creatinine doubles\n",
+    "creatinine['I'] = creatinine['value']>=2*creatinine['value_ref']\n",
+    "creatinine['F'] = creatinine['value']>=3*creatinine['value_ref']\n",
     "\n",
-    "# get max creatinine value within time window\n",
-    "max_creat = creatinine.loc[creatinine.groupby(['icustay_id'])['value'].idxmax(skipna=True)]\n",
+    "# Group creatinine measurements by icustay_id\n",
+    "icustay_creat = creatinine.groupby(['icustay_id'])\n",
+    "\n",
+    "# Find the first time the patient meets the RIFLE creatinine criteria \n",
+    "i_creat_ind = icustay_creat['I'].apply(lambda x: x[x].index[0] if len(x[x])>0 else None)\n",
+    "f_creat_ind = icustay_creat['F'].apply(lambda x: x[x].index[0] if len(x[x])>0 else None)\n",
+    "\n",
+    "i_creat = creatinine[['icustay_id','min_from_intime','value']].ix[i_creat_ind.dropna().tolist()]\n",
+    "i_creat = i_creat.set_index('icustay_id')\n",
+    "i_creat.rename(columns={'value':'i_val','min_from_intime':'i_time'},inplace=True)\n",
+    "\n",
+    "f_creat = creatinine[['icustay_id','min_from_intime','value']].ix[f_creat_ind.dropna().tolist()]\n",
+    "f_creat = f_creat.set_index('icustay_id')\n",
+    "f_creat.rename(columns={'value':'f_val','min_from_intime':'f_time'},inplace=True)\n",
+    "\n",
+    "# also get max creatinine value within time window\n",
+    "max_creat = creatinine.loc[icustay_creat['value'].idxmax(skipna=True)]\n",
     "\n",
     "# nicely summarize creatinine data\n",
     "d = {'icustay_id':max_creat['icustay_id'],\n",
-    "     'value_first':max_creat['value_first'],\n",
-    "     'value_max':max_creat['value'],}\n",
-    "aki_summary = pd.DataFrame(d)\n",
+    "     'ref_value':max_creat['value_ref'],\n",
+    "     'ref_time':max_creat['min_from_intime_ref'],\n",
+    "     'max_value':max_creat['value'],\n",
+    "     'max_time':max_creat['min_from_intime']}\n",
+    "creat_summary = pd.DataFrame(d)\n",
+    "creat_summary = creat_summary.set_index('icustay_id')\n",
     "\n",
-    "# use first and max creatinine within 48 hrs to determine AKI\n",
-    "# TODO: incorporate urine information\n",
-    "aki_summary['aki'] = ((aki_summary.value_max-aki_summary.value_first>=0.3) | \n",
-    "                      (aki_summary.value_max-aki_summary.value_first>=0.5*aki_summary.value_first))\n",
-    "aki = aki_summary.set_index('icustay_id')"
+    "creat_summary = creat_summary.join(i_creat,how='left')\n",
+    "creat_summary = creat_summary.join(f_creat,how='left')\n",
+    "creat_summary['creat_aki']=pd.notnull(creat_summary['i_val'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 354,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -242,10 +263,9 @@
     "lr_data = lr_data.set_index('icustay_id')\n",
     "\n",
     "lr_data = lr_data.join(min_maps,how='left')\n",
-    "lr_data.rename(columns={'value':'min_map'},inplace=True)\n",
+    "lr_data.rename(columns={'value':'min_map','bin':'min_map_bin'},inplace=True)\n",
     "\n",
-    "lr_data = lr_data.join(aki_summary['aki'],how='inner')\n",
-    "lr_data.rename(columns={'value':'aki'},inplace=True)"
+    "lr_data = lr_data.join(creat_summary['creat_aki'],how='left')"
    ]
   }
  ],
